--- a/Index.html
+++ b/Index.html
@@ -1,113 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Material Manager</title>
+  <title>Material Issue Manager</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 20px;
-      background: #f0f4f8;
+      background-color: #eef3f7;
+      padding: 0;
+      margin: 0;
     }
 
-    h2 {
-      text-align: center;
-      color: #2b6777;
-    }
-
-    label {
-      margin-top: 10px;
-      display: block;
-      font-weight: bold;
-    }
-
-    select, input[type="number"] {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-    }
-
-    button {
-      width: 100%;
-      padding: 12px;
+    header {
       background-color: #2b6777;
       color: white;
-      font-size: 15px;
+      padding: 20px;
+      text-align: center;
+      font-size: 24px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .container {
+      padding: 20px;
+    }
+
+    iframe {
+      width: 100%;
+      height: 800px;
       border: none;
       border-radius: 8px;
-      margin-top: 15px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #1c4e59;
-    }
-
-    #status {
-      margin-top: 15px;
-      text-align: center;
-      font-weight: bold;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
     }
   </style>
 </head>
 <body>
-  <h2>Material Manager</h2>
+  <header>
+    Material Issue Manager
+  </header>
 
-  <label for="material">Select Material:</label>
-  <select id="material"></select>
-
-  <label for="qty">Quantity to Add:</label>
-  <input type="number" id="qty" placeholder="Enter quantity" />
-
-  <button onclick="submit()">➕ Add Quantity</button>
-  <button onclick="downloadXLSX()">📥 Download XLSX</button>
-
-  <div id="status"></div>
-
-  <script>
-    // Load material list
-    google.script.run.withSuccessHandler(function(materials) {
-      const select = document.getElementById("material");
-      materials.forEach(name => {
-        const option = document.createElement("option");
-        option.value = option.textContent = name;
-        select.appendChild(option);
-      });
-    }).getMaterialList();
-
-    // Submit quantity
-    function submit() {
-      const material = document.getElementById("material").value;
-      const qty = parseFloat(document.getElementById("qty").value);
-      const status = document.getElementById("status");
-
-      if (!qty || qty <= 0) {
-        status.textContent = "❌ Please enter a valid quantity!";
-        status.style.color = "red";
-        return;
-      }
-
-      google.script.run.withSuccessHandler(function(response) {
-        status.textContent = response;
-        status.style.color = "green";
-        document.getElementById("qty").value = "";
-      }).updateQuantity(material, qty);
-    }
-
-    // Download XLSX
-    function downloadXLSX() {
-      google.script.run.withSuccessHandler(function(url) {
-        window.open(url, '_blank');
-      }).generateExcelDownloadLink();
-    }
-  </script>
-  <iframe
-  src="https://script.google.com/macros/s/AKfycbyaHX_kFOja9va2ThUmGX-xXt24rsy4pkZw9XKT_QUUE4OLJa_M8WiQOuAvJWsB5EM/exec"
-  width="100%"
-  height="800"
-  style="border: 1px solid #ccc; border-radius: 8px;">
-</iframe>
+  <div class="container">
+    <iframe
+      src="https://script.google.com/macros/s/AKfycbyaHX_kFOja9va2ThUmGX-xXt24rsy4pkZw9XKT_QUUE4OLJa_M8WiQOuAvJWsB5EM/exec"
+      allowfullscreen>
+    </iframe>
+  </div>
 </body>
 </html>
